# cxx_template

./: make.cmd  make.sh
src/: CMakeLists.txt  main.cpp
src/Header_Files/: myclass.hpp
src/Source_Files/: myclass.cpp
src/Test_Files/: CMakeLists.txt  myclass_test.cpp
src/header_files/: myclass.hpp
src/my_app/: CMakeLists.txt  main.cc  my_app.cc  my_app.h
src/source_files/: myclass.cpp
src/testing/: CMakeLists.txt  my_app_test.cc
